Normalize the layout to emphasize the separation of theming system from the base

--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Grow custom responsive sites",
   "main": "index.js",
   "scripts": {
-    "less": "lessc --source-map src/styles/clay-light.less src/styles/clay-light.css",
-    "less:watch": "onchange 'src/styles/**/*.less' -- npm run less",
+    "less": "lessc --source-map src/themes/topsoil.less src/themes/topsoil.css",
+    "less:watch": "onchange 'src/base/**/*.less' 'src/themes/**/*.less' -- npm run less",
     "server": "browser-sync start --server src --files=src/**/*.html,src/**/*.css,src/**/*.js",
     "start": "npm run less:watch & npm run server",
     "test": "echo \"Error: no test specified\" && exit 1"
