Add bluenight theme

--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "Grow custom responsive sites",
   "main": "index.js",
   "scripts": {
-    "less": "lessc --source-map src/themes/topsoil.less src/themes/topsoil.css",
-    "less:watch": "onchange 'src/base/**/*.less' 'src/themes/**/*.less' -- npm run less",
+    "less:topsoil": "lessc --source-map src/themes/topsoil.less src/themes/topsoil.css",
+    "less:bluenight": "lessc --source-map src/themes/bluenight.less src/themes/bluenight.css",
+    "less:watch": "onchange 'src/base/**/*.less' 'src/themes/**/*.less' -- npm run less:bluenight",
     "server": "browser-sync start --server src --files=src/**/*.html,src/**/*.css,src/**/*.js",
     "start": "npm run less:watch & npm run server",
     "test": "echo \"Error: no test specified\" && exit 1"
