--- a/package.json
+++ b/package.json
@@ -4,11 +4,19 @@
   "description": "Grow custom responsive sites",
   "main": "index.js",
   "scripts": {
-    "less:topsoil": "lessc --source-map src/themes/topsoil.less src/themes/topsoil.css",
-    "less:bluenight": "lessc --source-map src/themes/bluenight.less src/themes/bluenight.css",
+    "build": "npm run build:jspm && npm run build:less && npm run build:html && npm run copy",
+    "build:jspm": "jspm bundle-sfx index dist/bundle.js",
+    "build:html": "html-dist ./src/index.html --remove-all --insert bundle.js --output ./dist/index.html",
+    "build:less": "npm run less:topsoil && npm run less:bluenight && npm run less:common",
+    "less:topsoil": "lessc --source-map src/less/topsoil.less dist/css/topsoil.css",
+    "less:bluenight": "lessc --source-map src/less/bluenight.less dist/css/bluenight.css",
+    "less:common": "lessc --source-map src/less/common-inline.less dist/css/common.css",
     "less:watch": "onchange 'src/base/**/*.less' 'src/themes/**/*.less' -- npm run less:bluenight",
-    "server": "browser-sync start --server src --files=src/**/*.html,src/**/*.css,src/**/*.js",
-    "start": "npm run less:watch & npm run server",
+    "copy": "cp -r ./src/less ./dist/ && cp ./src/favicon.ico ./dist && npm run copy:fonts",
+    "copy:fonts": "cp -r ./src/jspm_packages/npm/font-awesome@4.3.0/fonts ./dist/ ",
+    "serve": "browser-sync start --no-open --no-notify --server src --files=src/**/*.html,src/**/*.less,src/**/*.css,src/**/*.js",
+    "startx": "npm run less:watch & npm run server",
+    "start": "npm run serve",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -33,6 +41,7 @@
   },
   "homepage": "https://github.com/niaxi/htmldirt",
   "devDependencies": {
+    "html-dist": "^0.1.0",
     "jspm": "^0.15.7",
     "less": "^2.5.1",
     "onchange": "^1.1.0",
